namespaces/live.cloud-platform.service.justice.gov.uk/onboarding-optimisation-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: onboarding-optimisation-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "dev"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "TBC"
    cloud-platform.justice.gov.uk/application: "onboarding-optimisation"
    cloud-platform.justice.gov.uk/owner: "Justice AI Unit: ross.guilbert@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/onboarding-optimisation"
    cloud-platform.justice.gov.uk/team-name: "justice-ai-unit"
    cloud-platform.justice.gov.uk/review-after: ""
